--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <h3>Pick 1 - Jordan Addison, WR</h3>
             <figure><img class="img" src="images/jordan_addison_001.jpg"></figure>
             <p class="info">Er af mange blevet nævnt som den bedste reciever i årets draft. Han er ikke den højste eller hurtigste, men han løber gode ruter og vil være en god erstatning for Thielen, som var én af de bedste route runners i ligaen.</p>
-            <h3>Pick 2 - Mekdi Blackmon - CB</h3>
-            <figure><img class="img" src="images/mekdi_blackmon_001.jpg"></figure>
+            <h3>Pick 2 - Mekhi Blackmon - CB</h3>
+            <figure><img class="img" src="images/mekhi_blackmon_001.jpg"></figure>
             <p class="info">Johnson er spået til at blive et 1st runde pick. Han er ikke den mest atletiske guard i draften, men han ville kunne bruges til Vikings OL med det samme i den kommende sæson.</p>
             <h3>Pick 3 - ??, ?</h3>
             <figure><img class="img" src="images/###_001.jpg"></figure>
