--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <article class="news">
             <h2>Vikings Draft 2023</h2>
             <figure><img class="img" src="images/draft_2023_001.jpg"></figure>
-            <p>Vikings tradede ikke op, så de kunne få en QB, der kan lærer et år bag Kirk Cousins, da det højst sandynligt er hans sidste sæson hos Vikings næste år. I stedet tog de en WR, som skal erstatte Thielen og kan supplere Justin Jefferson. Jeg havde håbet på en QB, da jeg synes at Osborn er en god reciever og Vikings ikke nødvendigvis har brug for en mere. Med deres nr. 2 pick tog de en CB.</p>
+            <p>Vikings tradede ikke op, så de kunne få en QB, der kan lærer et år bag Kirk Cousins, da det højst sandynligt er hans sidste sæson hos Vikings næste år. I stedet tog de en WR, som skal erstatte Thielen og kan supplere Justin Jefferson. Jeg havde håbet på en QB, da jeg synes at Osborn er en god reciever og Vikings ikke nødvendigvis har brug for en mere.</p>
             <h3>Pick 1 - Jordan Addison, WR</h3>
             <figure><img class="img" src="images/jordan_addison_001.jpg"></figure>
             <p class="info">Er af mange blevet nævnt som den bedste reciever i årets draft. Han er ikke den højste eller hurtigste, men han løber gode ruter og vil være en god erstatning for Thielen, som var én af de bedste route runners i ligaen.</p>
@@ -37,16 +37,13 @@
             <p class="info">Blackmon er en aggresiv mand til mand CB og vil sikkert passe godt ind i Brian Flores nye defense.</p>
             <h3>Pick 3 - 16</h3>
             <p><ol>
-                <li>Pick 3</li>
-                <li>Pick 4</li>
-                <li>Pick 5</li>
-                <li>Pick 6</li>
-                <li>Pick 7</li>
-                <li>Pick 8</li>
-                <li>Pick 9</li>
+                <li>Pick 3 - Jay Ward - S</li>
+                <li>Pick 4 - Jaquelin Roy - NT</li>
+                <li>Pick 5 - QB - Jaren Hall</li>
+                <li>Pick 6 - DeWayne McBride - RB</li>
             </ol></p>
             <h3>Konklusion</h3>
-            <p class="info">Som nævnt havde jeg personligt håbet på, at Vikings ville have muligheden for at drafte en af de mange QB, som var tilgængelige i årets draft. Men hvis man ikke tænker langsigtet og mere fokusere på den næste sæson, så er Addison og Blackmon nogle gode picks. Så må man bare håbe at de kan leve og til forventningerne til dem, holde sig væk fra ballade og forbliver skadefri.</p>
+            <p class="info">Som nævnt havde jeg personligt håbet på, at Vikings ville have muligheden for at drafte en af de mange QB, som var tilgængelige i årets draft. Men hvis man ikke tænker langsigtet og mere fokusere på den næste sæson, så er Addison og Blackmon nogle gode picks. Så må man bare håbe at de kan leve og til forventningerne til dem, holde sig væk fra ballade og forbliver skadesfri.</p>
             <h5>Artiklen er skrevet d. 29 april 2023</h5>
         </article>
 
