--- a/index.html
+++ b/index.html
@@ -26,6 +26,27 @@
     <div class="grid-item main">
 
         <article class="news">
+            <h2>Free Agency 2024</h2>
+            <figure><img class="img" src="images/vikings_free_agency_001.jpg"></figure>
+            <h3>Vikings Free Agencys højdepunkter:</h3>
+            <ol class="info">
+                <li><p>Vikings har hentet RB <a href="https://www.espn.com/nfl/player/_/id/3042519/aaron-jones" target="_blank">Aaron Jones</a> fra ærkerivalerne Green Bay Packers. Indtil videre er han nr. 1 RB på Vikings Depth Chart, da Vikings har fritstillet Alexander Mattison for nyligt og som blev samlet op af Raiders. Det virker umiddelbart som en rigtig god handel, men jeg kan godt mistænke Jones for,  at have haft sine bedste år i NFL bag sig, men håber han overrasker mig positivt.</p></li>
+
+                <li><p>Kirk Cousins aka Captain Kirk er fortid i Vikings. Han er skiftet til Atlanta Falcons og Vikings har derfor signet QB <a href="https://www.espn.com/nfl/player/_/id/3912547/sam-darnold" target="_blank">Sam Darnold</a>. Darnold blev draftet som pick 3 i første runde af 2018 draften, men levede aldrig op til de høje forventninger og har været en del rundt i NFL siden. Vikings drafter højst sandsynlig en QB i 1 runde i årets draft, så han er nok mest hentet som backup.</p></li>
+
+                <li><p>Danielle Hunter har også forladt Vikings til fordel for Texans. Men før han smuttede, signede Vikings DE <a href="https://www.espn.com/nfl/player/_/id/3916409/jonathan-greenard" target="_blank">Jonathan Greenard</a> fra netop Houston Texans. Han havde en rigtig god sæson for Texans sidste år og han er en af de bedste unge defensive ends, så det virker som en rigtig god signing for Vikings.</p></li>
+
+                <li><p>Derudover er LB <a href="https://www.espn.com/nfl/player/_/id/3133487/andrew-van-ginkel" target="_blank">Andrew Van Ginkel</a> kommet til klubben fra Dolphins og han bliver genforenet med Defensive Coach Brian Flores og forventes at blive én af de startende Linebackers for Vikings i den kommende sæson. En anden LB, som er kommet til klubben er <a href="https://www.espn.com/nfl/player/_/id/3728281/blake-cashman" target="_blank">Blake Cashman</a>, som også forventes at starte.</p></li>
+                
+                <li><p>Wide receiver K.J. Osborn er blevet signet af Patriots, hvilket jeg synes er ærgeligt, da han havde et stort pontentiale og altid var farlig, når han fik bolden.</p></li>
+                    
+                <li><p>Vikings kicker Greg Joseph har skrevet kontrakt med Packers, hvilket måske er meget godt, da han har misset mange spark for Vikings og tit har været grund til banden og svovlen herhjemme.</p></li>
+            </ol>
+            <figure><img class="img_article" src="images/jones_greenard_darnold.jpg"></figure>
+            <h5>Artiklen er skrevet d. 01 april 2024 </h5>
+        </article>
+
+        <article class="news">
             <h2>Vikings Draft 2023</h2>
             <figure><img class="img" src="images/draft_2023_001.jpg"></figure>
             <p>Vikings tradede ikke op, så de kunne få en QB, der kan lærer et år bag Kirk Cousins, da det højst sandynligt er hans sidste sæson hos Vikings næste år. I stedet tog de en WR, som skal erstatte Thielen og kan supplere Justin Jefferson. Jeg havde håbet på en QB, da jeg synes at Osborn er en god reciever og Vikings ikke nødvendigvis har brug for en mere.</p>
