--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <article class="news">
             <h2>Vikings Draft 2024</h2>
             <figure><img class="img" src="images/draft_2024_001.jpg"></figure>
-            <p>Vikings tradede ikke op, så de kunne få en QB, der kan lærer et år bag Kirk Cousins, da det højst sandynligt er hans sidste sæson hos Vikings næste år. I stedet tog de en WR, som skal erstatte Thielen og kan supplere Justin Jefferson. Jeg havde håbet på en QB, da jeg synes at Osborn er en god reciever og Vikings ikke nødvendigvis har brug for en mere.</p>
+            <p>Vikings tradede op i årets draft for at kunne vælge en QB med pick nr. 10, hvilket er første gang i Vikings historie.</p>
             <h3>Pick 1 - JJ McCarthy, QB</h3>
             <figure><img class="img" src="images/jj_mccarthy_001.jpg"></figure>
             <p class="info">Vikings tradede up fra pick nr. 11 til 10 for at drafte QB <a href="https://www.espn.com/nfl/player/_/id/4433970/jj-mccarthy" target="_blank">JJ McCarthy</a> fra Michigan Wolverines. Der var andre hold, som muligvis ville trade up til plads 10 for at tage McCarthy, men det lykkedes altså for Vikings at lave en handel med Jets og vælge McCarthy, som kan starte hos Vikings bag Sam Darnold og stille og roligt lære NFL at kende.</p>
