--- a/index.html
+++ b/index.html
@@ -25,6 +25,31 @@
     <!-- start main -->
     <div class="grid-item main">
 
+        <article class="depthchart2024">
+            <h2>Depth Chart Dec. 2024</h2>
+            <figure><img class="img" src="images/draft_2024_001.jpg"></figure>
+            <p>Minnesota Vikings depth chart ser ud som følgende, lige før de skal møde Packers her på søndag i en meget vigtig kamp</p>
+            <h3>QB - Sam Darnold, Nick Mullens, Brett Rypien</h3>
+            <h3>RB - Aaron Jones, Cam Akers, Ty Chandler</h3>
+            <h3>WR - Justin Jefferson, Jordan Addison, Jalen Nailor, Trent Sherfield Sr., Brandon Powell</h3>
+            <h3>TE - Justin Jefferson, Jordan Addison, Jalen Nailor, Trent Sherfield Sr., Brandon Powell</h3>
+            <figure><img class="img" src="images/jj_mccarthy_001.jpg"></figure>
+            <p class="info">Vikings tradede up fra pick nr. 11 til 10 for at drafte QB <a href="https://www.espn.com/nfl/player/_/id/4433970/jj-mccarthy" target="_blank">JJ McCarthy</a> fra Michigan Wolverines. Der var andre hold, som muligvis ville trade up til plads 10 for at tage McCarthy, men det lykkedes altså for Vikings at lave en handel med Jets og vælge McCarthy, som kan starte hos Vikings bag Sam Darnold og stille og roligt lære NFL at kende.</p>
+            <h3>Pick 2 - Dallas Turner - LB</h3>
+            <figure><img class="img" src="images/dallas_turner_001.jpg"></figure>
+            <p class="info">Vikings lavede endnu et trade og valgte med deres pick nr. 17 <a href="https://www.espn.com/nfl/player/_/id/4565190/dallas-turner" target="_blank">Dallas Turner</a>, som er en edge rusher, der skal erstatte tabet af Danielle Hunter i de kommende sæsoner.</p>
+            <h3>Pick 3 - 6</h3>
+            <p><ul>
+                <li>Pick 3 - Jay Ward - S</li>
+                <li>Pick 4 - Jaquelin Roy - NT</li>
+                <li>Pick 5 - QB - Jaren Hall</li>
+                <li>Pick 6 - DeWayne McBride - RB</li>
+            </ul></p>
+            <h3>Konklusion</h3>
+            <p class="info">???</p>
+            <h5>Artiklen er skrevet d. 26 marts 2024</h5>
+        </article>
+
         <article class="news">
             <h2>Vikings Draft 2024</h2>
             <figure><img class="img" src="images/draft_2024_001.jpg"></figure>
