--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <article class="depthchart2024">
             <h2>Depth Chart Dec. 2024</h2>
-            <figure><img class="img" src="images/draft_2024_001.jpg"></figure>
+            <figure><img class="img" src="vikingsdepthchart2024"></figure>
             <p>Minnesota Vikings depth chart ser ud som følgende, lige før de skal møde Packers her på søndag i en meget vigtig kamp</p>
             <h3>QB - Sam Darnold, Nick Mullens, Brett Rypien</h3>
             <h3>RB - Aaron Jones, Cam Akers, Ty Chandler</h3>
