--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- start main -->
     <div class="grid-item main">
 
-        <article class="depthchart2024">
+        <article class="news">
             <h2>Depth Chart Dec. 2024</h2>
             <figure><img class="img" src="vikingsdepthchart2024"></figure>
             <p>Minnesota Vikings depth chart ser ud som følgende, lige før de skal møde Packers her på søndag i en meget vigtig kamp</p>
