--- a/index.html
+++ b/index.html
@@ -29,11 +29,14 @@
             <h2>Depth Chart Dec. 2024</h2>
             <figure><img class="img" src="images\vikingsdepthchart2024.png"></figure>
             <p>Minnesota Vikings depth chart ser ud som følgende, lige før de skal møde Packers her på søndag i en meget vigtig kamp</p>
-            <h3>QB - Sam Darnold, Nick Mullens, Brett Rypien</h3>
-            <h3>RB - Aaron Jones, Cam Akers, Ty Chandler</h3>
-            <h3>WR - Justin Jefferson, Jordan Addison, Jalen Nailor, Trent Sherfield Sr., Brandon Powell</h3>
-            <h3>TE - Justin Jefferson, Jordan Addison, Jalen Nailor, Trent Sherfield Sr., Brandon Powell</h3>
-            <h5>Artiklen er skrevet d. 26 marts 2024</h5>
+            <h3>Offense</h3>
+                <p><ul>
+                <li>QB - Sam Darnold, Nick Mullens, Brett Rypien</li>
+                <li>RB - Aaron Jones, Cam Akers, Ty Chandler</li>
+                <li>WR - Justin Jefferson, Jordan Addison, Jalen Nailor, Trent Sherfield Sr., Brandon Powell</li>
+                <li>TE - </li>
+                </ul></p>
+            <h5>Artiklen er skrevet d. 27 december 2024</h5>
         </article>
 
         <article class="news">
