--- a/index.html
+++ b/index.html
@@ -31,11 +31,30 @@
             <p>Minnesota Vikings depth chart ser ud som følgende, lige før de skal møde Packers her på søndag i en meget vigtig kamp</p>
             <h3>Offense</h3>
                 <p><ul>
-                <li>QB - Sam Darnold, Nick Mullens, Brett Rypien</li>
-                <li>RB - Aaron Jones, Cam Akers, Ty Chandler</li>
-                <li>WR - Justin Jefferson, Jordan Addison, Jalen Nailor, Trent Sherfield Sr., Brandon Powell</li>
-                <li>TE - </li>
+                    <li>QB - Sam Darnold, Nick Mullens, Brett Rypien, J.J. McCarthy (IR)</li>
+                    <li>RB - Aaron Jones, Cam Akers, Ty Chandler</li>
+                    <li>WR - Justin Jefferson, Jordan Addison, Jalen Nailor, Trent Sherfield Sr., Brandon Powell</li>
+                    <li>TE - T.J. Hockenson, Josh Oliver, Johnny Mundt </li>
+                    <li>FB - C.J. Ham</li>
+                    <li>LT - Cam Robinson, Walter Rouse, Christian Darrisaw (IR), Jeremy Flax (IR)</li>
+                    <li>LG - Blake Brandel, Dalton Risner, Michael Jurgens</li>
+                    <li>C - Garrett Bradbury, Dan Feeney</li>
+                    <li>RG - Dalton Risner, Ed Ingram</li>
+                    <li>RT - Brian O'Neill, David Quessenberry</li>
                 </ul></p>
+            <h3>Defense</h3>
+                <p><ul>
+                    <li>LDE - Jerry Tillery, Jalen Redmond (Q)</li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul></p>
+
             <h5>Artiklen er skrevet d. 27 december 2024</h5>
         </article>
 
