--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <article class="news">
             <h2>Depth Chart Dec. 2024</h2>
             <figure><img class="img" src="images\vikingsdepthchart2024.png"></figure>
-            <p>Minnesota Vikings depth chart ser ud som følgende, lige før de skal møde Packers her på søndag i en meget vigtig kamp</p>
+            <p>Minnesota Vikings depth chart ser ud som følgende, lige før de skal møde Packers her på søndag i en meget vigtig kamp.</p>
             <h3>Offense</h3>
                 <p><ul>
                     <li>QB - Sam Darnold, Nick Mullens, Brett Rypien, J.J. McCarthy (IR)</li>
@@ -45,16 +45,27 @@
             <h3>Defense</h3>
                 <p><ul>
                     <li>LDE - Jerry Tillery, Jalen Redmond (Q)</li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>NT - Harrison Phillips, Taki Taimani (IR)</li>
+                    <li>RDE - Jonathan Bullard, Jihad Ward, Levi Drake Rodriguez</li>
+                    <li>WLB - Jonathan Greenard, Pat Jones II, Bo Richter</li>
+                    <li>LILB - Kamu Grugier-Hill, Jamin Davis, Ivan Pace Jr. (IR)</li>
+                    <li>RILB - Black Cashman, Brian Asamoah II</li>
+                    <li>SLB - Andrew Van Ginkel, Dallas Turner</li>
+                    <li>LCB - Stephon Gilmore, Fabian Moreau (Q), NaJee Thompson (IR)</li>
+                    <li>SS - Harrison Smith, Jay Ward</li>
+                    <li>FS - Camryn Bynum, Theo Jackson</li>
+                    <li>Shaquill Griffin, Dwight McGlothern, Mekhi Blackmon (IR)</li>
+                    <li>Byron Murphy Jr., Josh Metellus</li>
                 </ul></p>
-
+            <h3>Special Teams</h3>
+                <p><ul>
+                    <li>PK - Will Reichard</li>
+                    <li>P - Ryan Wright</li>
+                    <li>H - Ryan Wright</li>
+                    <li>PR - Brandon Powell</li>
+                    <li>KR - Ty Chandler, Brandon Powell</li>
+                    <li>LS - Andrew DePaola</li>
+                </ul></p>
             <h5>Artiklen er skrevet d. 27 december 2024</h5>
         </article>
 
