--- a/index.html
+++ b/index.html
@@ -28,44 +28,131 @@
         <article class="news">
             <h2>Depth Chart Dec. 2024</h2>
             <figure><img class="img" src="images\vikingsdepthchart2024.png"></figure>
+
             <p>Minnesota Vikings depth chart ser ud som følgende, lige før de skal møde Packers her på søndag i en meget vigtig kamp.</p>
             <h3>Offense</h3>
-                <p><ul>
-                    <li>QB - Sam Darnold, Nick Mullens, Brett Rypien, J.J. McCarthy (IR)</li>
-                    <li>RB - Aaron Jones, Cam Akers, Ty Chandler</li>
-                    <li>WR - Justin Jefferson, Jordan Addison, Jalen Nailor, Trent Sherfield Sr., Brandon Powell</li>
-                    <li>TE - T.J. Hockenson, Josh Oliver, Johnny Mundt </li>
-                    <li>FB - C.J. Ham</li>
-                    <li>LT - Cam Robinson, Walter Rouse, Christian Darrisaw (IR), Jeremy Flax (IR)</li>
-                    <li>LG - Blake Brandel, Dalton Risner, Michael Jurgens</li>
-                    <li>C - Garrett Bradbury, Dan Feeney</li>
-                    <li>RG - Dalton Risner, Ed Ingram</li>
-                    <li>RT - Brian O'Neill, David Quessenberry</li>
-                </ul></p>
+            <table>
+                <tr>
+                    <td>QB</td>
+                    <td>Sam Darnold, Nick Mullens, Brett Rypien, J.J. McCarthy (IR)</td>
+                </tr>
+                <tr>
+                    <td>RB</td>
+                    <td>Aaron Jones, Cam Akers, Ty Chandler</td>
+                </tr>
+                <tr>
+                    <td>WR</td>
+                    <td>Justin Jefferson, Jordan Addison, Jalen Nailor, Trent Sherfield Sr., Brandon Powell</td>
+                </tr>
+                <tr>
+                    <td>TE</td>
+                    <td>T.J. Hockenson, Josh Oliver, Johnny Mundt</td>
+                </tr>
+                <tr>
+                    <td>FB</td>
+                    <td>C.J. Ham</td>
+                </tr>
+                <tr>
+                    <td>LT</td>
+                    <td>Cam Robinson, Walter Rouse, Christian Darrisaw (IR), Jeremy Flax (IR)</td>
+                </tr>
+                <tr>
+                    <td>LG</td>
+                    <td>Blake Brandel, Dalton Risner, Michael Jurgens</td>
+                </tr>
+                <tr>
+                    <td>C</td>
+                    <td>Garrett Bradbury, Dan Feeney</td>
+                </tr>
+                <tr>
+                    <td>RG</td>
+                    <td>Dalton Risner, Ed Ingram</td>
+                </tr>
+                <tr>
+                    <td>RT</td>
+                    <td>Brian O'Neill, David Quessenberry</td>
+                </tr>
+            </table>
+
             <h3>Defense</h3>
-                <p><ul>
-                    <li>LDE - Jerry Tillery, Jalen Redmond (Q)</li>
-                    <li>NT - Harrison Phillips, Taki Taimani (IR)</li>
-                    <li>RDE - Jonathan Bullard, Jihad Ward, Levi Drake Rodriguez</li>
-                    <li>WLB - Jonathan Greenard, Pat Jones II, Bo Richter</li>
-                    <li>LILB - Kamu Grugier-Hill, Jamin Davis, Ivan Pace Jr. (IR)</li>
-                    <li>RILB - Black Cashman, Brian Asamoah II</li>
-                    <li>SLB - Andrew Van Ginkel, Dallas Turner</li>
-                    <li>LCB - Stephon Gilmore, Fabian Moreau (Q), NaJee Thompson (IR)</li>
-                    <li>SS - Harrison Smith, Jay Ward</li>
-                    <li>FS - Camryn Bynum, Theo Jackson</li>
-                    <li>Shaquill Griffin, Dwight McGlothern, Mekhi Blackmon (IR)</li>
-                    <li>Byron Murphy Jr., Josh Metellus</li>
-                </ul></p>
+            <table>
+                <tr>
+                    <td>LDE</td>
+                    <td>Jerry Tillery, Jalen Redmond (Q)</td>
+                </tr>
+                <tr>
+                    <td>NT</td>
+                    <td>Harrison Phillips, Taki Taimani (IR)</td>
+                </tr>
+                <tr>
+                    <td>RDE</td>
+                    <td>Jonathan Bullard, Jihad Ward, Levi Drake Rodriguez</td>
+                </tr>
+                <tr>
+                    <td>WLB</td>
+                    <td>Jonathan Greenard, Pat Jones II, Bo Richter</td>
+                </tr>
+                <tr>
+                    <td>LILB</td>
+                    <td>Kamu Grugier-Hill, Jamin Davis, Ivan Pace Jr. (IR)</td>
+                </tr>
+                <tr>
+                    <td>RILB</td>
+                    <td>Black Cashman, Brian Asamoah II</td>
+                </tr>
+                <tr>
+                    <td>SLB</td>
+                    <td>Andrew Van Ginkel, Dallas Turner</td>
+                </tr>
+                <tr>
+                    <td>LCB</td>
+                    <td>Stephon Gilmore, Fabian Moreau (Q), NaJee Thompson (IR)</td>
+                </tr>
+                <tr>
+                    <td>SS</td>
+                    <td>Harrison Smith, Jay Ward</td>
+                </tr>
+                <tr>
+                    <td>FS</td>
+                    <td>Camryn Bynum, Theo Jackson</td>
+                </tr>
+                <tr>
+                    <td>RCB</td>
+                    <td>Shaquill Griffin, Dwight McGlothern, Mekhi Blackmon (IR)</td>
+                </tr>
+                <tr>
+                    <td>NB</td>
+                    <td>Byron Murphy Jr., Josh Metellus</td>
+                </tr>
+            </table>
+
             <h3>Special Teams</h3>
-                <p><ul>
-                    <li>PK - Will Reichard</li>
-                    <li>P - Ryan Wright</li>
-                    <li>H - Ryan Wright</li>
-                    <li>PR - Brandon Powell</li>
-                    <li>KR - Ty Chandler, Brandon Powell</li>
-                    <li>LS - Andrew DePaola</li>
-                </ul></p>
+            <table>
+                <tr>
+                    <td>PK</td>
+                    <td>Reichard</td>
+                </tr>
+                <tr>
+                    <td>P</td>
+                    <td>Ryan Wright</td>
+                </tr>
+                <tr>
+                    <td>H</td> 
+                    <td>Wright</td>
+                </tr>
+                <tr>
+                    <td>PR</td>
+                    <td>Powell</td>
+                </tr>
+                <tr>
+                    <td>KR</td> 
+                    <td>Chandler, Brandon Powell</td>
+                </tr>
+                <tr>
+                    <td>LS</td> 
+                    <td>DePaola</td>
+                </tr>
+            </table>
             <h5>Artiklen er skrevet d. 27 december 2024</h5>
         </article>
 
