--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <div class="grid-item navmenu">
         <ul>
             <li><p><a href="https://www.espn.com/nfl/team/roster/_/name/min/minnesota-vikings" target="_blank">ROSTER</a></p></li>
+            <li><p><a href="https://www.espn.com/nfl/team/stats/_/name/min/minnesota-vikings" target="_blank">STATS</p></li>
+            <li><p><a href="https://www.espn.com/nfl/team/depth/_/name/min/minnesota-vikings" target="_blank">DEPTH CHART</a></p></li>
             <li><p><a href="https://www.vikings.com/draft/" target="_blank">DRAFT</a></p></li>
             <li><p><a href="https://www.espn.com/nfl/team/schedule/_/name/min/minnesota-vikings" target="_blank">KAMPE</a></p></li>
             <li><p><a href="#">ARTIKLER</a></p></li>
