--- a/index.html
+++ b/index.html
@@ -25,6 +25,27 @@
     </div>
     <!-- start main -->
     <div class="grid-item main">
+        
+        <article class="news">
+            <h2>Vikings Draft 2025</h2>
+            <figure><img class="img" src="images/draft_2025_001.jpg"></figure>
+            <p>Vikings draftede til fordel for JJ McCarthy, som pga. skade sad på bænken hele sidste år og nu skal vise om han kan blive en franchise QB for Minnesota Vikings.</p>
+            <h3>Pick 1 - Round 1, Pick 24 - Donavan Jackson, OL</h3>
+            <figure><img class="img" src="images/donavan_jackson_001.jpg"></figure>
+            <p class="info">Vikings draftede den store og stærke guard <a href="https://www.espn.com/nfl/player/bio/_/id/4431553/donovan-jackson" target="_blank">Donavan Jackson</a> fra Ohio State. Det forventes at han kan starte inde fra dag 1 og dermed være med til at give JJ McCarthy en god start, på sin forhåbentlige lange nfl karriere hos Vikings.</p>
+            <h3>Pick 2 - Round 2, Pick 102 - Tai Felton - WR</h3>
+            <figure><img class="img" src="images/tai_felton_001.jpg"></figure>
+            <p class="info">Vikings pick 2 er endnu en spiller, der forventes at starte fra dag 1, WR <a href="https://www.espn.com/nfl/player/bio/_/id/4565185/tai-felton" target="_blank">Tai Felton</a>, som især skulle være tænkt som kick off returner, men også som WR 3 eller 4. Han kan især være nytting i starten af sæsonen, hvis Addison får karantæne for de ulykker - DUI - han lavede i off season.</p>
+            <h3>Pick 3 - 5</h3>
+            <p><ul>
+                <li>Pick 3 - Round 5, Pick 139 - Tyrion Ingram Dawkins - DT</li>
+                <li>Pick 4 - Round 6, Pick 201 - Kobe King - LB</li>
+                <li>Pick 5 - Round 6, Pick 202 - Gavin Bartholomew - TE</li>
+            </ul></p>
+            <h3>Konklusion</h3>
+            <p class="info">Det var ikke den mest spændende draft set med lilla øjne, men jeg er glad for de prioriterede beskyttelse til JJ McCarty - så er dét i hvert fald <u>ikke</u> en undskyldning for hvis han spiller dårligt!</p>
+            <h5>Artiklen er skrevet d. 5 maj 2025</h5>
+        </article>
 
         <article class="news">
             <h2>Vikings 2024 sæson er slut!</h2>
