--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
     </div>
     <!-- start main -->
     <div class="grid-item main">
+
+        <article class="news">
+            <h2>Adam Thielen tilbage i Minnesota Vikings!</h2>
+            <p class="info">Adam Thielen er kommet hjem til Vikings efter 2 år i Carolina Panthers. Vikings betaler kun et 4 runde pick i 2027 draften for ham, så det er bestemt et godt trade, da Vikings mangler recievere her i starten af sæsonen. Jefferson er småskadet, det sammen er Nailor. Addison har 3 kampe karantæne - så Thielen forventes at skulle starte inde.</p>
+            <p>Thielen er en stor fan favorit i Minnesota, men udover det har han også trænet sammen med J.J. McCarthy i offseason, så de må kende lidt til hinanden.
+            Selvom Thielen er 35 år, håber og tror jeg han kan gøre en forskel i Vikings og hjælpe til både inde på banen og udenfor banen.</p>
+            <figure><img class="img" src="images/adam_thielen_002.jpg"></figure>
+            <h5>Artiklen er skrevet d. 05 september 2025 </h5>
+        </article>
         
         <article class="news">
             <h2>Vikings Draft 2025</h2>
